              new color hash function.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmquant: use File::Temp::tempfile() instead of local
              approximation if it is available.

              pnmquant: work with older Perl that doesn't have 3-argument open.
              Thanks Slaven Rezic <srezic@iconmobile.com>.

              libnetpbm, many programs: fix bug in pm_allocarray(): returns
              NULL when can't get memory.  Calling programs thus crash on
              very large images.  Introduced in 10.51.
              
              pnmtopng: fix bug: with -alpha specifying a mask which contains
              no fully transparent area, output PNG is fully opaque.
              Introduced in 10.29.

              pnmtops: fix message: says "from top edge" where it means
              "from bottom edge."

              ppmcie: fix bug: fails with "X coordinate out of range" error.
              Introduced in 10.51.

              bmptopnm: Fail properly with BMP that indicates an illegal bits
              per pixel.

              Build: To find libpng, use the Pkgconfig database entry instead
              of libpng-config if it is available.

              Build: pnmtops: Instead of omitting pnmtops from the build when
              there is no libz, just omit ability to create flate-compressed
              output from pnmtops.

11.06.29 BJH  Release 10.55.00

              Add pamtosrf, srftopam.  Thanks Mike Frysinger
              (vapier@gentoo.org).

              pgmtexture: fix wrong sum variance result.  Wrong since the
              beginning.  Thanks Francois P. S. Luus <fpsluus@gmail.com>.

              pamrubber: fix crash.  Introduced in 10.54.

              libnetpbm: pm_system(): fix bug - program always takes
              Standard Input from invoker's Standard Input when you don't
              supply a Standard Output accepter.  Introduced in 10.40.
